fix: make code java 11 compatible